notification, training, reference api done

--- a/src/app/notification/notification.page.scss
+++ b/src/app/notification/notification.page.scss
@@ -1,7 +1,17 @@
-h2 {
-    font-weight: 600;
+ion-grid {
+    padding: 10px 0;
+}
+
+h6 {
+    margin: auto;
+    font-size: 12px;
+}
+
+.date {
+    text-align: end;
 }
 
 p {
     font-size: 11px;
+    margin: auto;
 }
