--- a/src/app/notification/notification.page.html
+++ b/src/app/notification/notification.page.html
@@ -7,56 +7,23 @@
 <ion-content fullscreen>
 
   <ion-list>
-
-    <ion-item lines="full">
-      <ion-label class="ion-text-wrap">
-        <h2>Finn</h2>
-        <p>Listen, I've had a pretty messed up day Listen, I've had a pretty messed up day !</p>
-      </ion-label>
+    <ion-item lines="full" *ngFor="let notification of notificationsdata">
+      <ion-grid>
+        <ion-row>
+          <ion-col size="6">
+            <h6>Order Id : {{notification.orderId}}</h6>
+          </ion-col>
+          <ion-col size="6">
+            <p class="date">Date : {{notification.date}}</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="12">
+            <p>{{notification.title}}</p>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="ion-text-wrap">
-        <h2>Finn</h2>
-        <p>Listen, I've had a pretty messed up day...</p>
-      </ion-label>
-    </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="ion-text-wrap">
-        <h2>Finn</h2>
-        <p>Listen, I've had a pretty messed up day...</p>
-      </ion-label>
-    </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="ion-text-wrap">
-        <h2>Finn</h2>
-        <p>Listen, I've had a pretty messed up day...</p>
-      </ion-label>
-    </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="ion-text-wrap">
-        <h2>Finn</h2>
-        <p>Listen, I've had a pretty messed up day...</p>
-      </ion-label>
-    </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="ion-text-wrap">
-        <h2>Finn</h2>
-        <p>Listen, I've had a pretty messed up day...</p>
-      </ion-label>
-    </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="ion-text-wrap">
-        <h2>Finn</h2>
-        <p>Listen, I've had a pretty messed up day...</p>
-      </ion-label>
-    </ion-item>
-
   </ion-list>
 
 </ion-content>
