--- a/src/app/my-jobs/my-jobs.page.html
+++ b/src/app/my-jobs/my-jobs.page.html
@@ -21,6 +21,10 @@
 
 <ion-content>
 
+  <div class="no-data-msg" *ngIf=" no_data">
+    <span> No job(s) found </span>
+  </div>
+
 
   <ion-card *ngFor="let joblist of MyJobs">
 
@@ -28,11 +32,11 @@
 
 
       <ion-row (click)="GotoJobs(joblist)">
-        <ion-col size="8">
+        <ion-col size="7">
           <ion-card-title>{{joblist.title}}</ion-card-title>
         </ion-col>
-        <ion-col size="4">
-          <span class="status-txt">Send Quotation </span>
+        <ion-col size="5">
+          <span class="status-txt"> {{ apiService.JobStatus(joblist.status) }} </span>
           <ion-icon name="ellipse" class="color-theme"></ion-icon>
         </ion-col>
 
