--- a/src/global.scss
+++ b/src/global.scss
@@ -101,3 +101,10 @@ ion-toolbar {
     color: #561d5e;
     font-size: 13px;
 }
+
+.no-data-msg {
+    font-style: italic;
+    font-size: 12px;
+    text-align: center;
+    padding: 20px;
+}
