--- a/src/app/settings/schedule-training/schedule-training.page.html
+++ b/src/app/settings/schedule-training/schedule-training.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button text=""></ion-back-button>
+    </ion-buttons>
     <ion-title>Schedule Training</ion-title>
   </ion-toolbar>
 </ion-header>
