--- a/src/app/settings/settings.page.scss
+++ b/src/app/settings/settings.page.scss
@@ -16,8 +16,8 @@ ion-avatar {
 
 .menu-rows {
     border-bottom: 1px solid #dfdfdf;
-    // padding-bottom: 5px;
-    // padding-top: 5px;
+    padding-bottom: 5px;
+    padding-top: 5px;
     margin-left: 15px;
     margin-right: 15px;
     // margin-bottom: 5px;
