--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -53,7 +53,7 @@
 
     <ion-row>
       <ion-col size="6" *ngFor="let todayjobs of today">
-        <ion-card>
+        <ion-card (click)="JobDetails(todayjobs)">
           <ion-card-header>
             <ion-card-subtitle>
               <ion-icon name="briefcase-outline"></ion-icon> {{todayjobs.title}}
