--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -108,7 +108,7 @@
       </ion-col>
     </ion-row>
 
-    <ion-row class="menu-rows">
+    <ion-row class="menu-rows" (click)="NavigateNow('register')">
       <ion-col size="2">
         <ion-icon name="person-outline"></ion-icon>
       </ion-col>
@@ -120,7 +120,7 @@
       </ion-col>
     </ion-row>
 
-    <ion-row class="menu-rows">
+    <ion-row class="menu-rows" (click)="NavigateNow('reviews')">
       <ion-col size="2">
         <ion-icon name="star-outline"></ion-icon>
       </ion-col>
@@ -132,7 +132,7 @@
       </ion-col>
     </ion-row>
 
-    <ion-row class="menu-rows">
+    <ion-row class="menu-rows" (click)="NavigateNow('help-and-support')">
       <ion-col size="2">
         <ion-icon name="help-circle-outline"></ion-icon>
       </ion-col>
@@ -156,7 +156,7 @@
       </ion-col>
     </ion-row>
 
-    <ion-row class="menu-rows">
+    <ion-row class="menu-rows" (click)="ShowWebPage('https://naklibeta.com/pages/sp-terms.html')">
       <ion-col size="2">
         <ion-icon name="list-outline"></ion-icon>
       </ion-col>
