--- a/src/app/notification/notification.page.html
+++ b/src/app/notification/notification.page.html
@@ -18,7 +18,7 @@
             <h6>Order Id : {{notification.orderId}}</h6>
           </ion-col>
           <ion-col size="6">
-            <p class="date">Date : {{notification.date}}</p>
+            <p class="date">Date : {{apiService.formatDate(notification.date)}}</p>
           </ion-col>
         </ion-row>
         <ion-row>
