--- a/src/app/settings/schedule-training/schedule-training.page.scss
+++ b/src/app/settings/schedule-training/schedule-training.page.scss
@@ -14,6 +14,14 @@ ion-grid {
     font-weight: 600;
 }
 
+.schedule-div {
+    margin-top: 50px;
+}
+
+.training-detail {
+    font-weight: 600;
+}
+
 .date-col {
     border: 1px solid #909090;
     border-radius: 5px;
