--- a/src/global.scss
+++ b/src/global.scss
@@ -83,6 +83,14 @@ ion-toolbar {
     font-size: 12px;
     font-style: italic;
     color: #b72121;
+    padding-left: 10px;
+    margin: 0;
+}
+
+.warning-box {
+    font-size: 12px;
+    font-style: italic;
+    color: #b72121;
     background: #b7212112;
     padding-left: 10px;
     margin: 0;
