--- a/src/app/settings/schedule-training/schedule-training.page.html
+++ b/src/app/settings/schedule-training/schedule-training.page.html
@@ -45,7 +45,7 @@
         </ion-row>
         <ion-row>
           <ion-col class="date-col">
-            <ion-datetime displayFormat="hh:mm A" placeholder="Preferred Time" ngModel name="time"></ion-datetime>
+            <ion-datetime displayFormat="hh:mm" placeholder="Preferred Time" ngModel name="time"></ion-datetime>
           </ion-col>
         </ion-row>
         <ion-row class="button-row">
