--- a/src/app/payments/payments.page.scss
+++ b/src/app/payments/payments.page.scss
@@ -3,18 +3,23 @@
 }
 
 ion-tab-bar {
-    min-height: 60px;
+    min-height: 50px;
+}
+
+.ion-tab-button-left {
+    border-right: 1px solid #561d5e;
 }
 
 ion-list {
     overflow: scroll;
+    margin-top: 80px;
 }
 
-ion-row {
-    margin: 5px 0;
-}
+// ion-row {
+//     margin: 5px 0;
+// }
 
-ion-col {
+.ion-col-list ion-col {
     padding: 0;
 }
 
