--- a/src/app/job-details/job-details.page.scss
+++ b/src/app/job-details/job-details.page.scss
@@ -15,14 +15,15 @@ ion-grid {
 }
 
 .date {
-    margin: 23px 0;
+    margin: 15px 0;
     color: #909090;
     text-align: end;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .img-div {
     border: 1px solid #A0A0A0;
+    border-radius: 5px;
     padding: 10px;
 }
 
@@ -45,13 +46,30 @@ ion-grid {
 
 .address-tag {
     margin-top: 0;
-    font-weight: 600;
+    margin-bottom: 5px;
+    font-size: 14px;
+    font-weight: 600;   
 }
 
 .address {
     color: #909090;
+    font-size: 12px;
+    text-transform: capitalize;
 }
 
 .nomargin{
+    margin: 0;
+}
+
+.button-row {
+    margin-top: 25px;
+}
+
+.button-col {
+    padding: 0;
+}
+
+ion-button {
+    font-size: 12px;
     margin: 0;
 }
