--- a/src/app/my-jobs/my-jobs.page.scss
+++ b/src/app/my-jobs/my-jobs.page.scss
@@ -1,3 +1,8 @@
+ion-card {
+    box-shadow: none;
+    border: 1px solid #561d5e
+}
+
 ion-card-header {
     padding: 7px 21px;
     font-weight: bolder;
