--- a/src/app/job-details/job-details.page.html
+++ b/src/app/job-details/job-details.page.html
@@ -10,15 +10,15 @@
 <ion-content fullscreen>
   <ion-grid>
     <ion-row>
-      <ion-col>
+      <ion-col size="8">
         <div>
-          <h3 class="page-title">{{JobDetails.title}}</h3>
+          <h6 class="page-title">{{JobDetails.title}}</h6>
           <p class="order-id">Order Id : {{JobId}}</p>
         </div>
       </ion-col>
-      <ion-col>
+      <ion-col size="4">
         <div>
-          <h6 class="date">{{ apiService.formatDate(JobDetails.date)}}</h6>
+          <p class="date">Date : {{ apiService.formatDate(JobDetails.date)}}</p>
         </div>
       </ion-col>
     </ion-row>
@@ -56,7 +56,7 @@
     <ion-row *ngIf="JobDetails.status!=0">
       <ion-col>
         <div>
-          <h5 class="address-tag">Customer Contact Number :</h5>
+          <h6 class="address-tag">Customer Contact Number :</h6>
         </div>
         <div>
           <h6 class="address nomargin">
@@ -69,7 +69,7 @@
     <ion-row>
       <ion-col>
         <div>
-          <h5 class="address-tag">Address :</h5>
+          <h6 class="address-tag">Address :</h6>
         </div>
         <div>
           <h6 class="address nomargin">
@@ -86,20 +86,20 @@
       </ion-col>
     </ion-row>
 
-    <ion-row>
-      <ion-col *ngIf="JobDetails.status==0" size="12">
+    <ion-row class="button-row">
+      <ion-col *ngIf="JobDetails.status==0" size="12" class="button-col">
         <div>
           <ion-button expand="block" color="themepurple" (click)="AcceptJob()">ACCEPT</ion-button>
         </div>
       </ion-col>
 
-      <ion-col *ngIf="JobDetails.status==1" size="12">
+      <ion-col *ngIf="JobDetails.status==1" size="12" class="button-col">
         <div>
           <ion-button expand="block" color="themepurple" (click)="SendQuotation()">Send Quotation</ion-button>
         </div>
       </ion-col>
 
-      <ion-col *ngIf="JobDetails.status==2" size="12">
+      <ion-col *ngIf="JobDetails.status==2" size="12" class="button-col">
         <div>
           <ion-button expand="block" color="themepurple">Please wait for quotation approval</ion-button>
         </div>
