--- a/src/app/job-details/job-details.page.html
+++ b/src/app/job-details/job-details.page.html
@@ -93,7 +93,13 @@
         </div>
       </ion-col>
 
-      <ion-col *ngIf="JobDetails.status==1" size="12">
+      <ion-col *ngIf="JobDetails.status==1" size="6">
+        <div>
+          <ion-button expand="block" color="themepurple" (click)="Decline()">Decline</ion-button>
+        </div>
+      </ion-col>
+
+      <ion-col *ngIf="JobDetails.status==1" size="6">
         <div>
           <ion-button expand="block" color="themepurple" (click)="SendQuotation()">Send Quotation</ion-button>
         </div>
