--- a/src/app/settings/reviews/reviews.page.html
+++ b/src/app/settings/reviews/reviews.page.html
@@ -14,12 +14,9 @@
       <ion-label>
         <h3>{{reviews.name}}</h3>
         <div>
-          <!-- <ion-icon name="star-outline"></ion-icon>
-          <ion-icon name="star-outline"></ion-icon>
-          <ion-icon name="star-outline"></ion-icon>
-          <ion-icon name="star-outline"></ion-icon>
-          <ion-icon name="star-outline"></ion-icon> -->
-          {{reviews.ratings}}
+
+          <ion-icon style="color: #f7c704;" *ngFor="let item of [].constructor(reviews.ratings)" name="star">
+          </ion-icon>
         </div>
         <p class="ion-text-wrap">{{reviews.review}}</p>
       </ion-label>
